# atlas-ai-assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  azure.yaml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_baseline.py  599f3921fbe1_add_documents_table.py  7f70e129edb3_add_preferences_table.py  c53a2cd92837_add_conversations_and_messages.py  e70c953a8b37_add_tool_calling_columns_to_messages.py
app/: main.py
app/api/: auth_deps.py  deps.py
app/application/: chat.py  create_calendar_event.py  graph_profile.py  graph_tools.py  health.py  upload_document.py
app/domain/: entities.py  interfaces.py
app/infrastructure/: blob_storage_client.py  chat_client.py  config.py  conversation_models.py  conversation_repository.py  database.py  document_models.py  document_repository.py  graph_calendar_client.py  graph_client.py  graph_mail_client.py  health_repository.py  jwt_validator.py  logging.py  (+7 more)
frontend/: .env.example  Dockerfile  nginx.conf  package-lock.json  package.json
infra/: main.bicep  main.parameters.json
mcp_servers/: docs_server.py  graph_server.py  memory_server.py  notes_server.py
tests/: conftest.py  test_chat_use_case.py  test_document_chunking.py  test_graph_profile_use_case.py  test_graph_tool_executor.py  test_health_use_case.py  test_jwt_validator.py  test_mcp_docs_server.py  test_mcp_graph_server.py  test_mcp_memory_server.py  test_mcp_tool_provider.py  test_preference_repository.py  test_telemetry.py  test_upload_document_use_case.py
(+37 files in other folders)
